Fixed bug regarding the work-sessions history of users with no session.